[package]
name = "daemon-engine"
version = "0.3.2"
documentation = "https://docs.rs/daemon-engine/"
repository = "https://github.com/ryankurte/rust-daemon"
description = "A helper package for writing unix rust daemons with IPC based clients"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
license = "MIT / Apache-2.0"

[features]
examples = []
e2e_tests = []
default = []

[dependencies]
libc = "0.2"
futures = "0.1"
log = { version = "0.4"}
clap = "2.32"
users = "0.7"
uuid = { version = "0.6", features = ["v4"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.24"
tokio = "0.1.7"
tokio-io = "0.1.7"
tokio-uds = "0.2.0"
tokio-serde-json-mirror = "0.1"
tokio-timer = "0.2.5"
tokio-codec = "0.1.1"
bytes = "0.4.10"
tokio-tcp = "0.1.2"
tokio-udp = "0.1.3"
tokio-core = "0.1.17"

[[bin]]
name = "rustd-server"
path = "src/examples/server.rs"
required-features = ["examples"]

[[bin]]
name = "rustd-client"
path = "src/examples/client.rs"
required-features = ["examples"]
